# arxiv-post

./: .buildinfo  CITATION.cff  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand
.doctrees/: environment.pickle  index.doctree
.doctrees/_apidoc/: arxiv_post.apps.doctree  arxiv_post.apps.slack.doctree  arxiv_post.article.doctree  arxiv_post.arxiv.doctree  arxiv_post.cli.doctree  arxiv_post.consts.doctree  arxiv_post.deepl.doctree  arxiv_post.doctree
.github/workflows/: gh-pages.yml  pypi.yml  test.yml  tests.yml
_apidoc/: arxiv_post.apps.html  arxiv_post.apps.slack.html  arxiv_post.article.html  arxiv_post.arxiv.html  arxiv_post.cli.html  arxiv_post.consts.html  arxiv_post.deepl.html  arxiv_post.html
_modules/: index.html
_modules/arxiv_post/: article.html  arxiv.html  deepl.html
_modules/arxiv_post/apps/: slack.html
_sources/_apidoc/: arxiv_post.apps.rst.txt  arxiv_post.apps.slack.rst.txt  arxiv_post.article.rst.txt  arxiv_post.arxiv.rst.txt  arxiv_post.cli.rst.txt  arxiv_post.consts.rst.txt  arxiv_post.deepl.rst.txt  arxiv_post.rst.txt
arxiv_post/: __init__.py  article.py  arxiv.py  cli.py  constants.py  consts.py  deepl.py  detex.py  search.py  translate.py
arxiv_post/apps/: __init__.py  slack.py
astro_ph/: __init__.py  apps.py  article.py  arxiv.py  cli.py  constants.py  deepl.py  detex.py  search.py  translate.py
astro_ph/apps/: slack.py
docs/: build  conf.py  index.md  index.rst
scripts/: docs  setup
tests/: test_apps.py  test_article.py  test_arxiv.py  test_deepl.py  test_detex.py  test_metadata.py  test_search.py  test_translate.py
