[tool.poetry]
name = "arxiv-post"
version = "0.6.3"
description = "Translate and post arXiv articles to various apps"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
keywords = ["arxiv", "deepl", "slack", "translation"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/astropenguin/arxiv-post/"
documentation = "https://astropenguin.github.io/arxiv-post/"

[tool.poetry.dependencies]
python = "^3.8"
arxiv = "^1.4"
dateparser = "^1.1"
deepl = "^1.3"
fire = "^0.4"
more-itertools = "^8.11"
playwright = "^1.16"
pylatexenc = "^2.10"
requests = "^2.26"
tomli = "^1.2"

[tool.poetry.dev-dependencies]
black = "^21.11b"
ipython = "^7.31"
myst-parser = "^0.15"
pydata-sphinx-theme = "^0.7"
pytest = "^6.2"
sphinx = "^4.3"

[tool.poetry.scripts]
arxiv-post = "arxiv_post.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
