[tool.poetry]
name = "arxiv-post"
version = "0.6.4"
description = "Translate and post arXiv articles to Slack and various apps"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
keywords = ["arxiv", "deepl", "slack", "translation"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/astropenguin/arxiv-post/"
documentation = "https://astropenguin.github.io/arxiv-post/"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
arxiv = "^1.4"
dateparser = "^1.1"
deepl = "^1.4"
fire = "^0.4"
more-itertools = "^8.13"
playwright = "^1.18"
pylatexenc = "^2.10"
requests = "^2.27"
tomli = "^2.0"

[tool.poetry.dev-dependencies]
black = "^22.6"
ipython = "^8.4"
myst-parser = "^0.18"
pydata-sphinx-theme = "^0.9"
pytest = "^7.1"
sphinx = "^5.1"

[tool.poetry.scripts]
arxiv-post = "arxiv_post.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
