[tool.poetry]
name = "arxiv-post"
version = "0.7.0"
description = "Translate and post arXiv articles to Slack and various apps"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
keywords = ["arxiv", "deepl", "slack", "translation"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/astropenguin/arxiv-post/"
documentation = "https://astropenguin.github.io/arxiv-post/"

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
arxiv = "^1.4"
dateparser = "^1.1"
deepl = "^1.12"
fire = "^0.5"
more-itertools = "^9.0"
playwright = "^1.30"
pylatexenc = "^2.10"
requests = "^2.28"
tomli = "^2.0"

[tool.poetry.dev-dependencies]
black = "^23.3"
ipython = "^8.12"
myst-parser = "^1.0"
pydata-sphinx-theme = "^0.13"
pytest = "^7.3"
sphinx = "^6.2"

[tool.poetry.scripts]
arxiv-post = "arxiv_post.cli:main"

[tool.pyright]
typeCheckingMode = "basic"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
